after running bake

--- a/baked/logOfChanges/index.html
+++ b/baked/logOfChanges/index.html
@@ -37,7 +37,7 @@
 <li>Rewrite the ‘welcome.markdown’ file. You may remove or change the link to this ‘logOfChanges’.</li>
 <li>Rewrite the ‘minimalCV.markdown’ file and include a longer CV in the linked ‘longCV.markdown’ file.</li>
 <li>Rewrite the ‘contacts.markdown’.</li>
-</ol><p>These are the easy changes, editing a bunch of files, using markdown. Some instructions on markdown are found <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">here</a>.</p><p>For the blog, one can just add a markdown text in a file in ‘posts’ as ‘postOne.markdown’; this blog with the title “. In the blog post”How to add a publication list&quot; under Blog (or <a href="posts/PublicationList">here</a> ) I explainhow to construct a publication list from a BibTex file.</p>
+</ol><p>These are the easy changes, editing a bunch of files, using markdown. Some instructions on markdown are found <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">here</a>.</p><p>For the blog, one can just add a markdown text in a file in ‘posts’ as ‘postOne.markdown’; the blog title is then automatically included in the list of blogs shown under the menu item “Blog” with its title; a click leads then to the blog contant.</p><p>In the blog post “How to add a publication list” under Blog (or <a href="posts/constructingPubList">here</a> ) I explainhow to construct a publication list from a BibTex file.</p>
     <hr>
      <p class="meta tiny">
         01/08/2019 file logOfChanges with page.html
