--- a/cv/longCV/index.html
+++ b/cv/longCV/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>    Not My Homepage — under construction
+        <title>    LongCV
 </title>
         <link rel="stylesheet" type="text/css" href="/static/style.css">
         <meta charset="utf-8"/>
@@ -29,18 +29,11 @@
             </section>
         </section>
         <section class="content">
-            <h1>Not My Homepage — under construction</h1> 
-    <p>This is the start of a homepage to communicate to other what is important to me as a researcher. It could show:</p><ul>
-<li>chronological list of publications, as complete as possible and with links for download</li>
-<li>list of publications ordered by research topics</li>
-<li>drafts of papers for discussion</li>
-<li>my blog with smaller ideas and observations</li>
-<li>Curriculum vitae of various levels of detail</li>
-<li>my contact addresses</li>
-</ul><p>To make things easier for adaption, the bottom of the page says which source file is used and which template was applied. More details of the changes applied are described <a href="logOfChanges">here</a>.</p>
+            <h1>LongCV</h1> 
+    <p>NN is currently the SuperProf of Fairytales in Fairyland.</p><p>Prior to his current position, Dr. NN has been a professor in Hell(MX). He received funding by the Wonderful Science Foundation for research on unicorn pastures.</p><p>Since 2000 Dr. NN has published widely on fairies and unicorns. His particular interest is on unicorns on Albions sunny uplands.</p><p>He leads an active research group focusing on problems of unicorn herding.</p>
     <hr>
      <p class="meta tiny">
-        01/08/2019 file welcome with page.html
+        01/08/2019 file longCV with page.html
     </p>
 
         </section>
