--- a/publications/publicationStart/index.html
+++ b/publications/publicationStart/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>    Not My Homepage — under construction
+        <title>    Publication lists
 </title>
         <link rel="stylesheet" type="text/css" href="/static/style.css">
         <meta charset="utf-8"/>
@@ -29,18 +29,13 @@
             </section>
         </section>
         <section class="content">
-            <h1>Not My Homepage — under construction</h1> 
-    <p>This is the start of a homepage to communicate to other what is important to me as a researcher. It could show:</p><ul>
-<li>chronological list of publications, as complete as possible and with links for download</li>
-<li>list of publications ordered by research topics</li>
-<li>drafts of papers for discussion</li>
-<li>my blog with smaller ideas and observations</li>
-<li>Curriculum vitae of various levels of detail</li>
-<li>my contact addresses</li>
-</ul><p>To make things easier for adaption, the bottom of the page says which source file is used and which template was applied. More details of the changes applied are described <a href="logOfChanges">here</a>.</p>
+            <h1>Publication lists</h1> 
+    <h2 id="recent-publications">Recent publications</h2><p>here include formated text, for example cut&amp;paste from Jabref’s entry preview:</p><p>Hofer, B. &amp; Frank, A. U. Composing Models of Geographic Physical Processes, In: Hornsby, K.; Claramunt, C.; Denis, M. &amp; Ligozat, G. (Eds.) 9th International Conference Spatial Information Theory (COSIT), Springer, 2009, 421-435</p><h2 id="chronological-publication-list">Chronological <a href="/staticData/allEntries.html">publication list</a></h2><p>A list with my publications, with my BibTex entries, including (often) abstracts and a link for download (PDF).</p><h2 id="publications-organized-by-research-topics">Publications organized by Research Topics</h2><ul>
+<li><a href="/staticData/selectedEntries.html">Publications on Something</a></li>
+</ul>
     <hr>
      <p class="meta tiny">
-        01/08/2019 file welcome with page.html
+        01/08/2019 file publicationStart with page.html
     </p>
 
         </section>
