--- a/contacts/index.html
+++ b/contacts/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>    Not My Homepage — under construction
+        <title>    Contacts
 </title>
         <link rel="stylesheet" type="text/css" href="/static/style.css">
         <meta charset="utf-8"/>
@@ -29,18 +29,17 @@
             </section>
         </section>
         <section class="content">
-            <h1>Not My Homepage — under construction</h1> 
-    <p>This is the start of a homepage to communicate to other what is important to me as a researcher. It could show:</p><ul>
-<li>chronological list of publications, as complete as possible and with links for download</li>
-<li>list of publications ordered by research topics</li>
-<li>drafts of papers for discussion</li>
-<li>my blog with smaller ideas and observations</li>
-<li>Curriculum vitae of various levels of detail</li>
-<li>my contact addresses</li>
-</ul><p>To make things easier for adaption, the bottom of the page says which source file is used and which template was applied. More details of the changes applied are described <a href="logOfChanges">here</a>.</p>
+            <h1>Contacts</h1> 
+    <h2 id="address-university">Address University</h2><p>Research Group with 2 blanks at end<br />
+to achieve a newline, but no additiona space<br />
+University of Hell<br />
+1 Main Street<br />
+Hell (MX)</p><ol start="555" type="1">
+<li>123-4567</li>
+</ol><p>nn@hellu.edu</p><p>skype: NnnNnn</p>
     <hr>
      <p class="meta tiny">
-        01/08/2019 file welcome with page.html
+        01/08/2019 file contacts with page.html
     </p>
 
         </section>
