--- a/cv/minimalCV/index.html
+++ b/cv/minimalCV/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>    Not My Homepage — under construction
+        <title>    Curriculum vitae
 </title>
         <link rel="stylesheet" type="text/css" href="/static/style.css">
         <meta charset="utf-8"/>
@@ -29,18 +29,17 @@
             </section>
         </section>
         <section class="content">
-            <h1>Not My Homepage — under construction</h1> 
-    <p>This is the start of a homepage to communicate to other what is important to me as a researcher. It could show:</p><ul>
-<li>chronological list of publications, as complete as possible and with links for download</li>
-<li>list of publications ordered by research topics</li>
-<li>drafts of papers for discussion</li>
-<li>my blog with smaller ideas and observations</li>
-<li>Curriculum vitae of various levels of detail</li>
-<li>my contact addresses</li>
-</ul><p>To make things easier for adaption, the bottom of the page says which source file is used and which template was applied. More details of the changes applied are described <a href="logOfChanges">here</a>.</p>
+            <h1>Curriculum vitae</h1> 
+    <h2 id="minimal-cv">Minimal CV</h2><ul>
+<li>Undergrad studies: University of FairyLand 1999</li>
+<li><p>Doctoral degree: Infernal Univeristy 2006 Thesis: The difference of Herding Unicorns and Fairies</p></li>
+<li><a href="/cv/longCV">A very dated curriculum vitae</a><br />
+</li>
+<li></li>
+</ul>
     <hr>
      <p class="meta tiny">
-        01/08/2019 file welcome with page.html
+        01/08/2019 file minimalCV with page.html
     </p>
 
         </section>
